gradle: upgrade to 7.6.1 and enable incubator features