@@ -12,7 +12,8 @@ application {
     // Define the main class for the application.
     mainClass.set('dev.sbutler.bitflask.server.Server')
 
-    applicationDefaultJvmArgs = ['--enable-preview']
+    applicationDefaultJvmArgs = ['--enable-preview',
+                                 '--add-modules', 'jdk.incubator.concurrent']
 }
 
 jar {
